[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/UIMessages/AlertMessage.gd" type="Script" id=1]

[node name="AlertMessage" type="Popup"]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelContainer" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.2649
margin_top = -8.0
margin_right = 49.7351
margin_bottom = 8.0
color = Color( 0.705882, 0.215686, 0.215686, 0.886275 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="LabelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "hello world"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AutoHideTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
[connection signal="timeout" from="AutoHideTimer" to="." method="_on_AutoHideTimer_timeout"]
